# pico_audio_link

./: Cargo.toml
crates/audio-link-device/: Cargo.toml
crates/audio-link-device/src/: i2s_read.rs  main.rs
crates/audio-link-dongle/: Cargo.toml  memory.x
crates/audio-link-dongle/src/: class_codes.rs  main.rs  microphone.rs  terminal_type.rs
crates/audio-link-proto/: Cargo.toml
crates/audio-link-proto/src/: lib.rs
