

[workspace]
resolver = "3"
members = ["crates/audio-link-proto", "crates/audio-link-dongle"]


[patch.crates-io]
embassy-embedded-hal =   {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-executor =       {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-executor-macros =       {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-futures =        {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-hal-internal =  {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-net =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-net-driver =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-net-driver-channel =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-rp =          {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-sync =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-time =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
embassy-time-driver =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
cyw43 =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}
cyw43-pio =           {git = "https://github.com/embassy-rs/embassy.git", rev="ef673c6ca310cf0a7e9b1254afb7806bd6879e94"}

[workspace.dependencies]
embassy-embedded-hal = { version = "0.4.0"}
embassy-sync = { version = "0.7.1"}
embassy-executor = { version = "0.8.0"}
embassy-time = { version = "0.4.0"}
embassy-rp = { version = "0.7.0"}
embassy-futures = { version = "0.1.1"}
embassy-usb = { version = "0.5.0"}
embassy-usb-logger = { version = "0.5.0"}
embassy-net = { version = "0.7.0"}
cyw43 = { version = "0.4.0"}
cyw43-pio = { version= "0.6.0"}

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true