[package]
name = "pico-audio-device"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "audio-link-device"
path = "src/main.rs"
doctest = false
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { workspace=true, features = ["defmt"] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = { workspace = true}
embassy-usb = { workspace = true, features = ["defmt"] }
embassy-usb-logger = { workspace = true}
usbd-hid = "0.8.2"
embassy-net = { workspace = true, features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
cyw43 = { workspace = true, features= ["defmt", "firmware-logs"] }
cyw43-pio = { workspace = true, features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = {version="2.1", features=["nightly"]}
paste = "1.0"
uom = {version = "0.36", default-features = false,  features = ["f32", "si", "autoconvert"]}
fixed = "1.29.0"

log = "0.4"
nb = "1.1.0"
embedded-hal-nb = "1.0"
#smoltcp = { version = "0.11.0", default-features = false, features = ["socket", "async", "proto-ipv6", "medium-ip"] }
embedded-alloc = { version = "0.6.0"}
embedded-nal-async = "0.8.0"
embedded-io-async = "0.6.1"
embedded-hal-bus = "0.2.0"

bumpalo = {version = "3.16.0"}
micromath = "2.1.0"
portable-atomic = {version="1.10", default-features = false, features=["critical-section"]}

